Adição do Seminário

--- a/Projetos/Aula04/.gitignore
+++ b/Projetos/Aula04/.gitignore
@@ -1,3 +1,5 @@
+htmlReport/
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -36,3 +38,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+htmlReport/
